ui/file_manager/file_manager/foreground/css/file_manager_gm3.css
/* ... */
body.check-select #list-container .thumbnail-grid:focus
    .thumbnail-item[lead],
#list-container .thumbnail-grid:focus
    .thumbnail-item[lead]:not([selected]) {
  /* 2px border: 1px via box-shadow + 1px via border, to accommodate
     the difference between regular border 1px and selected border 2px.*/
  border-color: var(--cros-sys-focus_ring);
  box-shadow: 0 0 0 1px var(--cros-sys-focus_ring);
}

body.check-select #list-container .thumbnail-grid
    .thumbnail-item[lead],
#list-container .thumbnail-grid
    .thumbnail-item[lead]:not([selected]) {
  /* 2px border: 1px via box-shadow + 1px via border, to accommodate
     the difference between regular border 1px and selected border 2px.*/
  border-color: var(--cros-sys-on_surface_variant);
  box-shadow: 0 0 0 1px var(--cros-sys-on_surface_variant);
}

.thumbnail-grid > .spacer.folder-spacer {
  height: 5px;
}

.thumbnail-grid > .spacer {
  height: 0;
}

body:not(.check-select) .thumbnail-grid.image-dominant
    .can-hide-filename.thumbnail-loaded:not([selected]) .thumbnail-bottom {
  display: none;
}

/* Padding counterweights negative margins of items, thus eliminating scroll
   bar when it's not needed. Max height is set to fit 8 items before showing
   scroll bar. */
body.files-ng #default-tasks-list {
  height: 240px;
  margin-bottom: 32px;
  margin-top: 20px;
  padding-inline: 32px;
}

#default-task-dialog.bottom-shadow::after {
  background:
      linear-gradient(transparent 0, var(--cros-sys-base_elevated) 100%);
  bottom: 24px;
  content: '';
  height: 40px;
  left: 0;
  pointer-events: none;
  position: absolute;
  width: 100%
}

#default-tasks-list li {
  border-radius: 8px;
  height: 40px;
  line-height: 40px;
}

#default-tasks-list > li > .icon {
  -webkit-mask-position: 16px center;
  -webkit-mask-repeat: no-repeat;
  background-position: 16px center;
  background-repeat: no-repeat;
  background-size: 20px;
  height: 100%;
}

#default-tasks-list > li > .label {
  padding-inline-start: 52px;
  position: absolute;
}

html[dir='rtl'] #default-tasks-list > li > .icon {
  -webkit-mask-position-x: calc(100% - 16px);
  background-position-x: calc(100% - 16px);
}

body.files-ng #list-container list > li[selected],
body.files-ng #list-container list > li:active,
body.files-ng #list-container list > li.accepts,
body.files-ng #list-container list > li[lead],
body.files-ng #list-container list > li[selected] .icon-badge,
body.files-ng #list-container list > li:active .icon-badge,
body.files-ng #list-container list > li.accepts .icon-badge,
body.files-ng #list-container list > li[lead] .icon-badge {
  background-color: var(--cros-sys-surface_variant);
}

body.files-ng #list-container list:focus > li[selected],
body.files-ng #list-container list:focus > li.accepts[selected],
body.files-ng #list-container list:focus > li[lead],
body.files-ng #list-container list:focus > li[selected] .icon-badge,
body.files-ng #list-container list:focus > li.accepts[selected] .icon-badge,
body.files-ng #list-container list:focus > li[lead] .icon-badge {
  background-color: var(--cros-sys-secondary_container);
}

body.files-ng #default-tasks-list:focus > li[selected],
body.files-ng #default-tasks-list > li[selected] {
  background-color: var(--cros-sys-primary_container);
  color: var(--cros-sys-on_primary_container);
  outline: none;
}

body.files-ng #default-tasks-list li[selected]::after {
  -webkit-mask-image: url(../images/common/ic_selected.svg);
  -webkit-mask-position: right;
  -webkit-mask-repeat: no-repeat;
  background-color: var(--cros-sys-on_primary_container);
  content: ' ';
  height: 40px;
  position: absolute;
  right: 16px;
  top: 0;
  width: 40px;
}

html[dir='rtl'] body.files-ng #default-tasks-list li[selected]::after {
  background-position: left;
  left: 16px;
  right: unset;
}

#list-container li {
  border: 2px solid transparent;
}

/* Modify GROUP_HEADING_HEIGHT in file_table_list.js if this height changes. */
#list-container .group-heading {
  border-bottom: 1px solid var(--cros-separator-color);
  box-sizing: border-box;
  color: var(--cros-sys-on_surface);
  font: var(--cros-button-2-font);
  /* The desired height plus the border width. */
  height: calc(56px + 1px);
  padding-inline-start: 20px;
  padding-top: 20px;
  /* Make sure clicking this area can unselect file items. */
  pointer-events: none;
  width: 100%;
}

/*
 * selector "li[lead]" is for the row just being operated on,
 * e.g. with mouse: click/select/unselect
 *      with keyboard: Ctrl + ArrowUp/ArrowDown to move
 */
body.check-select #list-container list:focus > li[lead],
body.check-select #list-container list:focus > li[selected] {
  background-color: var(--cros-sys-primary_container);
}

body.check-select #list-container list:focus > li[lead] {
  border: 2px solid var(--cros-sys-focus_ring);
}

body.check-select #list-container list > li[lead],
body.check-select #list-container list > li[selected] {
  background-color: var(--cros-sys-surface_variant);
}

body.check-select #list-container list > li[lead] {
  border: 2px solid var(--cros-sys-on_surface_variant);
}

#list-container grid > .accepts .thumbnail-bottom {
  background-color: var(--cros-sys-surface_variant);
}

#directory-tree .tree-item.accepts > .tree-row,
#list-container list > li.accepts,
#list-container grid > li.accepts {
  animation: acceptsBlink 200ms linear 1s 3;
}

@keyframes acceptsBlink {
  0% {
    background-color: transparent;
    color: var(--cros-sys-hover_on_prominent);
  }
}

.table-row-cell .filename-label,
.thumbnail-item .filename-label,
/* Show ellipsis in cells. The name column has different structure and overrides
   this rule. */
.table-row-cell > div {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: pre;
}

/* Text box used for renaming in the detail list. */
.table-row-cell input.rename {
  border-width: 0;
  min-width: 0;
  padding: 2px 0;
}
/* ... */

